ДЗ спринт №6, версия №1