@@ -1,6 +1,7 @@
 package service;
 
-import java.util.LinkedList;
+import java.util.List;
+
 import org.junit.jupiter.api.Test;
 import static org.junit.jupiter.api.Assertions.*;
 import model.*;
@@ -9,29 +10,64 @@ import static model.TaskStatus.NEW;
 class InMemoryHistoryManagerTest {
 
     // убедимся, что задачи, добавляемые в HistoryManager,
-    // сохраняют предыдущую версию задачи и её данных
+    // не сохраняют предыдущую версию задачи и её данных
     @Test
     void taskVersionsInHistoryManager() {
+        TaskManager inMemoryTaskManager = Managers.getDefault();
+        HistoryManager historyManager = Managers.getDefaultHistory();
         Task task = new Task("Test taskVersionsInHistoryManager",
                 "Data 01", NEW);
-        HistoryManager historyManager = new InMemoryHistoryManager();
+        inMemoryTaskManager.makeNewTask(task);
         historyManager.add(task);
-        task = new Task("Test taskVersionsInHistoryManager",
-                "Data 02", NEW);
+        task.setDescription("Data 02");
         historyManager.add(task);
 
-        assertEquals("Data 01", historyManager.getHistory().get(0).getDescription());
-        assertEquals("Data 02", historyManager.getHistory().get(1).getDescription());
+        assertEquals(List.of(task), historyManager.getHistory());
+        assertEquals("Data 02", historyManager.getHistory().getFirst().getDescription());
     }
 
     // Пример теста из ТЗ
     @Test
     void add() {
+        TaskManager inMemoryTaskManager = Managers.getDefault();
+        HistoryManager historyManager = Managers.getDefaultHistory();
         Task task = new Task("Test addNewTask", "Test addNewTask description", NEW);
-        HistoryManager historyManager = new InMemoryHistoryManager();
+        inMemoryTaskManager.makeNewTask(task);
         historyManager.add(task);
-        final LinkedList<Task> history = historyManager.getHistory();
+        final List<Task> history = historyManager.getHistory();
         assertNotNull(history, "История не пустая.");
         assertEquals(1, history.size(), "История не пустая.");
     }
+
+    // Проверяем встроенный связный список версий
+    // (реализация метода getHistory перекладывает задачи из
+    // связного списка в ArrayList для формирования ответа).
+    // Также проверяем операцию добавления.
+    @Test
+    void linkedListTest() {
+        TaskManager taskManager = Managers.getDefault();
+        Task task = new Task("Test linkedListTest",
+                "Test linkedListTest description", NEW);
+        taskManager.makeNewTask(task);
+        taskManager.getTaskById(1);
+        taskManager.getTaskById(1);
+        assertEquals(List.of(task), taskManager.getHistoryManager());
+    }
+
+    // Проверяем операцию удаления
+    @Test
+    void remove() {
+        TaskManager taskManager = Managers.getDefault();
+        Task task1 = new Task("Test remove #1",
+                "Test remove description #1", NEW);
+        taskManager.makeNewTask(task1);
+        Task task2 = new Task("Test remove #2",
+                "Test remove description #2", NEW);
+        taskManager.makeNewTask(task2);
+        taskManager.getTaskById(1);
+        taskManager.getTaskById(2);
+        taskManager.deleteTaskById(1);
+        assertEquals(List.of(task2), taskManager.getHistoryManager());
+    }
+
 }
